# in3-example-espidf

./: .gitmodules  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig  in3_http.c  in3_main.c
